sg.tf
data "aws_vpc" "default" {
  default = true
}

resource "aws_security_group" "sg" {
    name = "my-sg-group"
    description = "these is my security group"
    vpc_id = data.aws_vpc.default.id 

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "ubuntu-sg"
    }
}
